[package]
name = "cron-engine"
version = "0.1.0"
edition = "2024"
authors = ["Chinedu Elijah Okoronkwo"]
repository = "https://github.com/chineduCoded/cron-engine"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
chrono-tz = "0.10.4"
derive_builder = "0.20.2"
lru = "0.18.0"
memchr = "2.8.1"
proptest = "1.11.0"
parking_lot = "0.12.5"
redis = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sled = "0.34.7"
sqlx = "0.9.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.10.1"
criterion = { version = "0.8", features = ["html_reports"] }
dhat = "0.3"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "scheduler"
harness = false

[[bench]]
name = "iterator"
harness = false

[[bench]]
name = "bitfield"
harness = false

[[bench]]
name = "bitfield_iter"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "candidate"
harness = false

[[bench]]
name = "calendar"
harness = false

[[bench]]
name = "impossible"
harness = false

[[bench]]
name = "navigator"
harness = false

[[bench]]
name = "pathological"
harness = false

[[bench]]
name = "allocations"
harness = false
